// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Mutations create user account 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "accessToken": "thisisaverylongtokengeneratedbyajwtsigningfunctioninmyauthservice",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Auth Mutations log in user 1`] = `
Object {
  "data": Object {
    "loginUser": Object {
      "accessToken": "thisisaverylongtokengeneratedbyajwtsigningfunctioninmyauthservice",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Auth Mutations refresh a user's access token 1`] = `
Object {
  "data": Object {
    "refreshToken": Object {
      "accessToken": "thisisaverylongtokengeneratedbyajwtsigningfunctioninmyauthservice",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Auth Mutations verify OTP 1`] = `
Object {
  "data": Object {
    "verifyOTP": Object {
      "accessToken": "thisisaverylongtokengeneratedbyajwtsigningfunctioninmyauthservice",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Auth Mutations verify email 1`] = `
Object {
  "data": Object {
    "verifyEmail": Object {
      "accessToken": "thisisaverylongtokengeneratedbyajwtsigningfunctioninmyauthservice",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Auth Mutations verify phone 1`] = `
Object {
  "data": Object {
    "verifyPhone": Object {
      "accessToken": "thisisaverylongtokengeneratedbyajwtsigningfunctioninmyauthservice",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
